# OmicOS-BixBench

./: .gitignore  Makefile  README.md  bench-env.template.sh  pyproject.toml
analysis/: category_breakdown.html  category_breakdown.py  category_summary.csv  leaderboard.html  leaderboard_chart.py  radar_grades_v2.jsonl
configs/: agents.yaml  models.yaml
docs/: grading-deviations.md  omicos-bixbench-evaluation-report.md
docs/failure-cases/: README.md  bix-45-q1-question-does-not-specify-shared-orthologs.md  bix-61-q5-question-does-not-specify-variant-filtering.md
results/rerun-24q2-noplan/bulk_rna_analyst/bix-24-q2/: grade.json
results/rerun-27q5-bulk/bulk_rna_analyst/bix-27-q5/: grade.json
results/rerun-45q1-gpt55/omicverse_omni/bix-45-q1/: grade.json
results/rerun-hung4/bulk_rna_analyst/bix-32-q2/: grade.json
results/rerun-hung4/bulk_rna_analyst/bix-43-q2/: grade.json
results/rerun-hung4/omicverse_omni/bix-35-q1/: grade.json
results/rerun-hung4/omicverse_omni/bix-55-q1/: grade.json
results/rerun-literal-wording/omicverse_omni/bix-34-q5/: grade.json
results/rerun-literal-wording/omicverse_omni/bix-35-q2/: grade.json
results/rerun4-gpt55/bulk_rna_analyst/bix-26-q5/: grade.json
results/rerun4-gpt55/omicverse_omni/bix-11-q1/: grade.json
results/rerun4-gpt55/omicverse_omni/bix-11-q2/: grade.json
results/rerun4-gpt55/omicverse_omni/bix-27-q5/: grade.json
results/rerun4-postdeploy/omicverse_omni/bix-27-q5/: grade.json
scripts/: smoke.sh
src/omicos_bixbench/: __init__.py  cli.py  client.py  dataset.py  grader.py  matrix.py  runner.py
(+46 files in other folders)
