[project]
name = "omicos-bixbench"
version = "1.0.0"
description = "Harness + results for evaluating the omicos agent on BixBench-Verified-50."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [
    { name = "OmicVerse contributors" },
]
keywords = [
    "benchmark", "llm-agent", "bioinformatics", "bixbench", "omicos",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "License :: Free for non-commercial use",
]
dependencies = [
    "click>=8.1",
    "huggingface-hub>=0.24",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pyyaml>=6.0",
    "rich>=13.7",
    "tenacity>=8.5",
    "openai>=1.40",                # for llm_verifier
    "pandas>=2",
    "matplotlib>=3.7",             # analysis/ static figures
    "plotly>=5.20",                # analysis/ interactive figures
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "mypy"]

[project.urls]
Homepage  = "https://github.com/omicverse/OmicOS-BixBench"
Dataset   = "https://huggingface.co/datasets/phylobio/BixBench-Verified-50"
OmicOS    = "https://github.com/omicverse/omicos"
OmicVerse = "https://github.com/omicverse/omicverse"

[project.scripts]
omicos-bixbench = "omicos_bixbench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omicos_bixbench"]
